# alphaMELTS

./: .gitignore  LICENSE  README.md  README_old.md  pyproject.toml  workspace.toml
bases/alphamelts/app/: __init__.py
bases/alphamelts/mat/: MELTSdynamic.m  MELTSengine.m  MELTSstatus.m  __init__.py
bases/alphamelts/py/: __init__.py  meltsdynamic.py  meltsstatus.py
components/alphamelts/cli/: __init__.py
components/alphamelts/cli/include/: adiabat.h
components/alphamelts/cli/src/: alphamelts.c  alphamelts_support.c
components/alphamelts/lib/: CMakeLists.txt  __init__.py
components/alphamelts/lib/include/: elm_struct_data.h  param_struct_data.h  phmelts.h  silmin.h  trace_struct_data.h
components/alphamelts/lib/src/: adiabat_1ph.c
components/alphamelts/lib/src/alphamelts/lib/: alloy-liquid.c  amphibole.c  biotite.c  check_coexisting_solids.c  clinoamphibole.c  equality_constraints.c  est_sat-state_revised.c  evaluate_saturation.c  garnet.c  gibbs.c  gradient_hessian.c  hornblende.c  ilmenite.c  interface.c  kalsilite.c  lawson_hanson.c  library.c  liquid-co2.c  liquid.c  liquidus.c  majorite.c  mthread.c  nepheline.c  orthopyroxene.c  perovskite.c  read_write.c  rhombohedral.c  rhomsghiorso.c  ringwoodite.c  silmin.c  silmin_support.c  sub-solidus-mu-o2.c  sub-thermo-calc.c  wadsleyite.c  water.c
docs/: README.md
examples/: README.md
examples/RC12frac/: README.md
examples/RC12frac/app/: Bulk_comp_tbl.txt  KM0417_RC12_frac.melts  Liquid_comp_tbl.txt  Phase_main_tbl.txt  Phase_mass_tbl.txt  Phase_vol_tbl.txt  Solid_comp_tbl.txt  System_main_tbl.txt  auto_batch.txt  clinopyroxene.tbl  col_custom.txt  col_phase_mass.txt  col_phase_vol.txt  fluid.tbl  logfile.txt  melts-liquid.tbl  melts.out  olivine.tbl  plagioclase.tbl  spinel.tbl  temp.txt  tridymite.tbl
examples/RC12frac/ipynb/: rc12frac.ipynb
examples/RC12frac/mat/: RC12frac.m
examples/RC12frac/py/: rc12frac.py
examples/app/: Morb.melts  Morb2.melts  README.md  batch.txt  infile2.txt  settings.txt  tutorial.gmt
examples/ipynb/: column-pick.command  run-alphamelts.command  tutorial_colab.ipynb  tutorial_local.ipynb
examples/mat/: tutorial.m
examples/py/: tutorial.py
examples/tutorial/: README.md
examples/tutorial/app/: col_custom.txt  infile.txt
examples/tutorial/ipynb/: column-pick.pl  meltsplotter.py  tutorial_local.ipynb
examples/tutorial/mat/: tutorial.m
examples/tutorial/py/: legend.txt  tutorial.py
examples/tutorial/r/: tutorial.R
test/bases/alphamelts/app/: test_core.py
test/bases/alphamelts/mat/: test_core.py
test/bases/alphamelts/py/: test_core.py
test/components/alphamelts/cli/: test_core.py
test/components/alphamelts/lib/: test_core.py
workspaces/: Makefile_old
workspaces/app/: pyproject.toml
workspaces/app/src/alphamelts/app/: file-format.command  file-format.pl  install.command  install.pl  install2.command  main.py  run-alphamelts.command  run-alphamelts.pl  test_main.py
workspaces/cli/: pyproject.toml
workspaces/cli/src/alphamelts/cli/: alphamelts.c  alphamelts_interface.c  main.py  test_main.py
workspaces/include/: MELTSdynamic.h  alphamelts.h  interface.h  nash.h  status.h
workspaces/includes/: adiabat.h  alphamelts.h  lawson_hanson.h  liq_struct_data.h  melts_gsl.h  mthread.h  param_struct_data_CO2.h  param_struct_data_CO2_H2O.h  param_struct_data_v34.h  phmelts.h  sol_struct_data.h
workspaces/lib/: pyproject.toml
workspaces/lib/src/alphamelts/lib/: adiabat_1ph.c  adiabat_support.c  albite.c  alloy-solid.c  alphamelts_interface.c  alphamelts_support.c  biotite-taj.c  check_coexisting_liquids.c  clinopyroxene.c  cubicquad_internal.c  cummingtonite.c  equality_constraints.c  est_saturation_state.c  feldspar.c  fluid-phase.c  fluid.c  gradient_hessian.c  initial_guess.c  interface.c  leucite.c  library.c  linear_search.c  liquid-co2-h2o.c  liquid_v34.c  liquidus.c  melilite.c  melts_linalg.c  melts_support.c  melts_threads.c  nash.c  nepheline.c  olivine-sx.c  olivine.c  ortho-oxide.c  orthoamphibole.c  phmelts_support.c  plagioclase.c  read_write.c  rhombohedral.c  silmin.c  (+5 more)
workspaces/lib/tests/: test_foo.py
workspaces/mat/: pyproject.toml
workspaces/mat/src/alphamelts/mat/: MELTSdynamic.m  MELTSengine.m  MELTSevent.m  MELTSmap.m  test_main.py
workspaces/py/: pyproject.toml
workspaces/py/src/alphamelts/py/: meltsdynamic.py  meltsengine.py  test_main.py
