[project]
name = "alphamelts"
version = "2.4.0"
description = ""
authors = [
    {name = "Paula Antoshechkina",email = "psmith@caltech.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "setuptools-cpp (>=0.1.0,<0.2.0)"
]

[project.urls]
repository = "https://github.com/magmasource/alphaMELTS/"
"Bug Tracker" = "https://github.com/magmasource/alphaMELTS/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"
