[tool.poetry]
name = "alphamelts-app"
version = "0.0.0"
description = ""
authors = []
packages = [{include = "alphamelts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.0"
alphamelts-cli = { path = "../cli"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
