[tool.poetry]
name = "alphamelts-cli"
version = "0.0.0"
description = ""
authors = []
packages = [{include = "alphamelts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.6.0"
alphamelts-lib = { path = "../lib"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
