[tool.poetry]
name = "alphamelts-py"
version = "0.0.0"
description = ""
authors = []
packages = [{include = "alphamelts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.0"
alphamelts-lib = { path = "../lib"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
